--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@
     box-sizing: border-box;
 }
 
+h1 {
+    font-family: 'Oswald', sans-serif;
+}
+
 /* General styles */
 body {
     min-height: 100vh;
@@ -22,11 +26,15 @@ header {
     background-color: lightcoral;
 }
 
+h1 {
+    font-family: 'Oswald', sans-serif;
+    }
+
 /* Main content */
 main {
     background-color: lightblue;
     /* Make main element take up any surplus space to push footer down */
-    flex: 10 auto;
+    flex: 1 0 auto;
 }
 
 /* Footer */
