--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ h1 {
     }
 
 #menu {
-    font-size: 100%;
+    font-size: 110%;
     letter-spacing: 4px;
     list-style-type: none;
 }
@@ -55,6 +55,17 @@ h1 {
 
 .active {
     border-bottom: 1px solid #3a3a3a;
+}
+
+/* Navbar styles with dropdown toggle */
+nav { 
+    position: absolute;
+    background-color: #ffffff;
+    width: 100%;
+    left: 0;
+    padding: 0 1rem;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: none;
 }
 
 /* Main content */
