--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,15 @@ body {
     color: #3a3a3a;
     font-family: "Open Sans", sans-serif;
     }
+
+h1, h2, h3 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+    }
+    
+
 /* Header */
 header {
     background-color: #ffffff;
@@ -38,13 +47,6 @@ header a {
     text-decoration: none;
     color: inherit;
 }
-
-h1 {
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525;
-    }
 
 #menu {
     font-size: 110%;
@@ -90,13 +92,30 @@ main {
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
-    background: url("../images/hero-image.webp") no-repeat center center/cover;
 }
 
 /* Hero section */
 #hero {
     height:600px;
     width: 100%;
+    background: url("../images/hero-image.webp") no-repeat center center/cover;
+    position: relative;
+}
+
+#cover-text {
+    /* Final rgba value sets the opacity so it is semi-transparent */
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff
 }
 
 /* Footer */
@@ -147,6 +166,12 @@ main {
     main {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
+    }
+
+    /* Hero */
+    #cover-text {
+        width:300px;
+        right:50px;
     }
 }
 
