--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,32 @@ main {
     color: #ffffff
 }
 
+/* Reasons section */
+hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
+}
+
+#reasons {
+    width: 90%;
+    margin:20px auto;
+}
+
+#reasons > h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 200%;
+}
+
+#benefits-physical > div, #benefits-mental > div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
+#benefits p {
+    padding: 0 20px;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
