--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,11 +119,6 @@ main {
 }
 
 /* Reasons section */
-hr {
-    border-top: 1px solid #3a3a3a;
-    margin: 5px 0;
-}
-
 #reasons {
     width: 90%;
     margin:20px auto;
@@ -142,6 +137,28 @@ hr {
 
 #benefits p {
     padding: 0 20px;
+}
+
+#benefits hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
+}
+
+#circle-cover-bg {
+    background: url(../images/reasons-image.webp) no-repeat top center / cover;
+    height: 90vw;
+    width: 90vw;
+    margin-bottom: 20px;
+    /* Makes the square image into a circle */
+    border-radius:50%;
+    max-width: 300px;
+    max-height: 300px;
+}
+
+#benefits-images {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Footer */
