Hide section heading with utility class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,15 +20,18 @@ body {
     /* Generic project styles */
     color: #3a3a3a;
     font-family: "Open Sans", sans-serif;
-    }
+}
 
 h1, h2, h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #252525;
-    }
-    
+}
+
+.hidden-heading {
+    display: none;
+}
 
 /* Header */
 header {
